src/sintatico/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    CONST
    DERIVED
    FUNCTIONAL_COMPLEXES
    INSTANCE_NAME
    INVALID_CLASS_NAME
    INVALID_DATATYPE
    INVALID_INSTANCE_NAME
    INVALID_RELATION_NAME
    LPAREN
    ORDERED
    REDEFINES
    RPAREN
    SUBSETS

Grammar

Rule 0     S' -> ontology
Rule 1     ontology -> import_list package_list
Rule 2     ontology -> package_list
Rule 3     import_list -> import_statement
Rule 4     import_list -> import_list import_statement
Rule 5     import_statement -> IMPORT CLASS_NAME
Rule 6     package_list -> package
Rule 7     package_list -> package_list package
Rule 8     package -> PACKAGE CLASS_NAME LBRACE declarations RBRACE
Rule 9     package -> PACKAGE CLASS_NAME declarations
Rule 10    declarations -> <empty>
Rule 11    declarations -> declarations declaration
Rule 12    declaration -> class_declaration
Rule 13    declaration -> datatype_declaration
Rule 14    declaration -> enum_declaration
Rule 15    declaration -> generalization_declaration
Rule 16    declaration -> relation_declaration
Rule 17    class_declaration -> class_stereotype CLASS_NAME
Rule 18    class_declaration -> class_stereotype CLASS_NAME SPECIALIZES parent_list
Rule 19    class_declaration -> class_stereotype CLASS_NAME LBRACE class_body RBRACE
Rule 20    class_declaration -> class_stereotype CLASS_NAME SPECIALIZES parent_list LBRACE class_body RBRACE
Rule 21    parent_list -> CLASS_NAME
Rule 22    parent_list -> parent_list COMMA CLASS_NAME
Rule 23    class_stereotype -> KIND
Rule 24    class_stereotype -> SUBKIND
Rule 25    class_stereotype -> ROLE
Rule 26    class_stereotype -> PHASE
Rule 27    class_stereotype -> CATEGORY
Rule 28    class_stereotype -> MIXIN
Rule 29    class_stereotype -> PHASEMIXIN
Rule 30    class_stereotype -> ROLEMIXIN
Rule 31    class_stereotype -> HISTORICALROLEMIXIN
Rule 32    class_stereotype -> COLLECTIVE
Rule 33    class_stereotype -> QUANTITY
Rule 34    class_stereotype -> QUALITY
Rule 35    class_stereotype -> MODE
Rule 36    class_stereotype -> INTRINSICMODE
Rule 37    class_stereotype -> EXTRINSICMODE
Rule 38    class_stereotype -> EVENT
Rule 39    class_stereotype -> SITUATION
Rule 40    class_stereotype -> PROCESS
Rule 41    class_stereotype -> HISTORICALROLE
Rule 42    class_stereotype -> RELATOR
Rule 43    class_body -> <empty>
Rule 44    class_body -> class_body class_member
Rule 45    class_member -> attribute_declaration
Rule 46    class_member -> internal_relation_declaration
Rule 47    class_member -> standalone_stereotype
Rule 48    standalone_stereotype -> AT relation_stereotype
Rule 49    attribute_declaration -> RELATION_NAME COLON type_reference
Rule 50    type_reference -> NUMBER_TYPE
Rule 51    type_reference -> STRING_TYPE
Rule 52    type_reference -> BOOLEAN_TYPE
Rule 53    type_reference -> DATE_TYPE
Rule 54    type_reference -> TIME_TYPE
Rule 55    type_reference -> DATETIME_TYPE
Rule 56    type_reference -> CLASS_NAME
Rule 57    type_reference -> CUSTOM_DATATYPE
Rule 58    datatype_declaration -> CUSTOM_DATATYPE LBRACE datatype_body RBRACE
Rule 59    datatype_body -> <empty>
Rule 60    datatype_body -> datatype_body attribute_declaration
Rule 61    enum_declaration -> ENUM CLASS_NAME LBRACE instance_list RBRACE
Rule 62    instance_list -> CLASS_NAME
Rule 63    instance_list -> instance_list COMMA CLASS_NAME
Rule 64    generalization_declaration -> genset_modifiers GENSET CLASS_NAME WHERE GENERAL CLASS_NAME SPECIFICS class_name_list
Rule 65    generalization_declaration -> genset_modifiers GENSET CLASS_NAME LBRACE genset_body RBRACE
Rule 66    genset_modifiers -> <empty>
Rule 67    genset_modifiers -> DISJOINT
Rule 68    genset_modifiers -> COMPLETE
Rule 69    genset_modifiers -> OVERLAPPING
Rule 70    genset_modifiers -> INCOMPLETE
Rule 71    genset_modifiers -> DISJOINT COMPLETE
Rule 72    genset_modifiers -> COMPLETE DISJOINT
Rule 73    genset_modifiers -> OVERLAPPING INCOMPLETE
Rule 74    genset_modifiers -> INCOMPLETE OVERLAPPING
Rule 75    genset_body -> GENERAL CLASS_NAME SPECIFICS class_name_list
Rule 76    class_name_list -> CLASS_NAME
Rule 77    class_name_list -> class_name_list COMMA CLASS_NAME
Rule 78    cardinality -> LBRACKET ASTERISK RBRACKET
Rule 79    cardinality -> LBRACKET INTEGER RBRACKET
Rule 80    cardinality -> LBRACKET INTEGER DOTDOT INTEGER RBRACKET
Rule 81    cardinality -> LBRACKET INTEGER DOTDOT ASTERISK RBRACKET
Rule 82    cardinality -> <empty>
Rule 83    internal_relation_declaration -> relation_stereotype cardinality arrow_symbol cardinality CLASS_NAME
Rule 84    internal_relation_declaration -> relation_stereotype RELATION_NAME cardinality arrow_symbol cardinality CLASS_NAME
Rule 85    internal_relation_declaration -> relation_stereotype arrow_symbol CLASS_NAME
Rule 86    internal_relation_declaration -> relation_stereotype RELATION_NAME arrow_symbol CLASS_NAME
Rule 87    internal_relation_declaration -> arrow_symbol RELATION_NAME arrow_symbol cardinality CLASS_NAME
Rule 88    internal_relation_declaration -> arrow_symbol RELATION_NAME arrow_symbol CLASS_NAME
Rule 89    relation_declaration -> AT relation_stereotype RELATION CLASS_NAME cardinality arrow_symbol RELATION_NAME arrow_symbol cardinality CLASS_NAME
Rule 90    relation_declaration -> AT relation_stereotype RELATION CLASS_NAME cardinality arrow_symbol cardinality CLASS_NAME
Rule 91    relation_declaration -> AT relation_stereotype RELATION CLASS_NAME arrow_symbol CLASS_NAME
Rule 92    relation_declaration -> relation_stereotype CLASS_NAME cardinality arrow_symbol cardinality CLASS_NAME
Rule 93    relation_declaration -> relation_stereotype CLASS_NAME arrow_symbol CLASS_NAME
Rule 94    relation_stereotype -> MATERIAL
Rule 95    relation_stereotype -> MEDIATION
Rule 96    relation_stereotype -> CHARACTERIZATION
Rule 97    relation_stereotype -> DERIVATION
Rule 98    relation_stereotype -> COMPARATIVE
Rule 99    relation_stereotype -> EXTERNALDEPENDENCE
Rule 100   relation_stereotype -> COMPONENTOF
Rule 101   relation_stereotype -> MEMBEROF
Rule 102   relation_stereotype -> SUBCOLLECTIONOF
Rule 103   relation_stereotype -> SUBQUALITYOF
Rule 104   relation_stereotype -> INSTANTIATION
Rule 105   relation_stereotype -> TERMINATION
Rule 106   relation_stereotype -> PARTICIPATIONAL
Rule 107   relation_stereotype -> PARTICIPATION
Rule 108   relation_stereotype -> HISTORICALDEPENDENCE
Rule 109   relation_stereotype -> CREATION
Rule 110   relation_stereotype -> MANIFESTATION
Rule 111   relation_stereotype -> BRINGSABOUT
Rule 112   relation_stereotype -> TRIGGERS
Rule 113   relation_stereotype -> COMPOSITION
Rule 114   relation_stereotype -> AGGREGATION
Rule 115   relation_stereotype -> INHERENCE
Rule 116   relation_stereotype -> VALUE
Rule 117   relation_stereotype -> FORMAL
Rule 118   relation_stereotype -> CONSTITUTION
Rule 119   arrow_symbol -> ARROW_LEFT
Rule 120   arrow_symbol -> ARROW_RIGHT
Rule 121   arrow_symbol -> ARROW

Terminals, with rules where they appear

AGGREGATION          : 114
ARROW                : 121
ARROW_LEFT           : 119
ARROW_RIGHT          : 120
ASTERISK             : 78 81
AT                   : 48 89 90 91
BOOLEAN_TYPE         : 52
BRINGSABOUT          : 111
CATEGORY             : 27
CHARACTERIZATION     : 96
CLASS_NAME           : 5 8 9 17 18 19 20 21 22 56 61 62 63 64 64 65 75 76 77 83 84 85 86 87 88 89 89 90 90 91 91 92 92 93 93
COLLECTIVE           : 32
COLON                : 49
COMMA                : 22 63 77
COMMENT              : 
COMPARATIVE          : 98
COMPLETE             : 68 71 72
COMPONENTOF          : 100
COMPOSITION          : 113
CONST                : 
CONSTITUTION         : 118
CREATION             : 109
CUSTOM_DATATYPE      : 57 58
DATETIME_TYPE        : 55
DATE_TYPE            : 53
DERIVATION           : 97
DERIVED              : 
DISJOINT             : 67 71 72
DOTDOT               : 80 81
ENUM                 : 61
EVENT                : 38
EXTERNALDEPENDENCE   : 99
EXTRINSICMODE        : 37
FORMAL               : 117
FUNCTIONAL_COMPLEXES : 
GENERAL              : 64 75
GENSET               : 64 65
HISTORICALDEPENDENCE : 108
HISTORICALROLE       : 41
HISTORICALROLEMIXIN  : 31
IMPORT               : 5
INCOMPLETE           : 70 73 74
INHERENCE            : 115
INSTANCE_NAME        : 
INSTANTIATION        : 104
INTEGER              : 79 80 80 81
INTRINSICMODE        : 36
INVALID_CLASS_NAME   : 
INVALID_DATATYPE     : 
INVALID_INSTANCE_NAME : 
INVALID_RELATION_NAME : 
KIND                 : 23
LBRACE               : 8 19 20 58 61 65
LBRACKET             : 78 79 80 81
LPAREN               : 
MANIFESTATION        : 110
MATERIAL             : 94
MEDIATION            : 95
MEMBEROF             : 101
MIXIN                : 28
MODE                 : 35
NUMBER_TYPE          : 50
ORDERED              : 
OVERLAPPING          : 69 73 74
PACKAGE              : 8 9
PARTICIPATION        : 107
PARTICIPATIONAL      : 106
PHASE                : 26
PHASEMIXIN           : 29
PROCESS              : 40
QUALITY              : 34
QUANTITY             : 33
RBRACE               : 8 19 20 58 61 65
RBRACKET             : 78 79 80 81
REDEFINES            : 
RELATION             : 89 90 91
RELATION_NAME        : 49 84 86 87 88 89
RELATOR              : 42
ROLE                 : 25
ROLEMIXIN            : 30
RPAREN               : 
SITUATION            : 39
SPECIALIZES          : 18 20
SPECIFICS            : 64 75
STRING_TYPE          : 51
SUBCOLLECTIONOF      : 102
SUBKIND              : 24
SUBQUALITYOF         : 103
SUBSETS              : 
TERMINATION          : 105
TIME_TYPE            : 54
TRIGGERS             : 112
VALUE                : 116
WHERE                : 64
error                : 

Nonterminals, with rules where they appear

arrow_symbol         : 83 84 85 86 87 87 88 88 89 89 90 91 92 93
attribute_declaration : 45 60
cardinality          : 83 83 84 84 87 89 89 90 90 92 92
class_body           : 19 20 44
class_declaration    : 12
class_member         : 44
class_name_list      : 64 75 77
class_stereotype     : 17 18 19 20
datatype_body        : 58 60
datatype_declaration : 13
declaration          : 11
declarations         : 8 9 11
enum_declaration     : 14
generalization_declaration : 15
genset_body          : 65
genset_modifiers     : 64 65
import_list          : 1 4
import_statement     : 3 4
instance_list        : 61 63
internal_relation_declaration : 46
ontology             : 0
package              : 6 7
package_list         : 1 2 7
parent_list          : 18 20 22
relation_declaration : 16
relation_stereotype  : 48 83 84 85 86 89 90 91 92 93
standalone_stereotype : 47
type_reference       : 49

Parsing method: LALR

state 0

    (0) S' -> . ontology
    (1) ontology -> . import_list package_list
    (2) ontology -> . package_list
    (3) import_list -> . import_statement
    (4) import_list -> . import_list import_statement
    (6) package_list -> . package
    (7) package_list -> . package_list package
    (5) import_statement -> . IMPORT CLASS_NAME
    (8) package -> . PACKAGE CLASS_NAME LBRACE declarations RBRACE
    (9) package -> . PACKAGE CLASS_NAME declarations

    IMPORT          shift and go to state 6
    PACKAGE         shift and go to state 7

    ontology                       shift and go to state 1
    import_list                    shift and go to state 2
    package_list                   shift and go to state 3
    import_statement               shift and go to state 4
    package                        shift and go to state 5

state 1

    (0) S' -> ontology .



state 2

    (1) ontology -> import_list . package_list
    (4) import_list -> import_list . import_statement
    (6) package_list -> . package
    (7) package_list -> . package_list package
    (5) import_statement -> . IMPORT CLASS_NAME
    (8) package -> . PACKAGE CLASS_NAME LBRACE declarations RBRACE
    (9) package -> . PACKAGE CLASS_NAME declarations

    IMPORT          shift and go to state 6
    PACKAGE         shift and go to state 7

    package_list                   shift and go to state 8
    import_statement               shift and go to state 9
    package                        shift and go to state 5

state 3

    (2) ontology -> package_list .
    (7) package_list -> package_list . package
    (8) package -> . PACKAGE CLASS_NAME LBRACE declarations RBRACE
    (9) package -> . PACKAGE CLASS_NAME declarations

    $end            reduce using rule 2 (ontology -> package_list .)
    PACKAGE         shift and go to state 7

    package                        shift and go to state 10

state 4

    (3) import_list -> import_statement .

    IMPORT          reduce using rule 3 (import_list -> import_statement .)
    PACKAGE         reduce using rule 3 (import_list -> import_statement .)


state 5

    (6) package_list -> package .

    PACKAGE         reduce using rule 6 (package_list -> package .)
    $end            reduce using rule 6 (package_list -> package .)


state 6

    (5) import_statement -> IMPORT . CLASS_NAME

    CLASS_NAME      shift and go to state 11


state 7

    (8) package -> PACKAGE . CLASS_NAME LBRACE declarations RBRACE
    (9) package -> PACKAGE . CLASS_NAME declarations

    CLASS_NAME      shift and go to state 12


state 8

    (1) ontology -> import_list package_list .
    (7) package_list -> package_list . package
    (8) package -> . PACKAGE CLASS_NAME LBRACE declarations RBRACE
    (9) package -> . PACKAGE CLASS_NAME declarations

    $end            reduce using rule 1 (ontology -> import_list package_list .)
    PACKAGE         shift and go to state 7

    package                        shift and go to state 10

state 9

    (4) import_list -> import_list import_statement .

    IMPORT          reduce using rule 4 (import_list -> import_list import_statement .)
    PACKAGE         reduce using rule 4 (import_list -> import_list import_statement .)


state 10

    (7) package_list -> package_list package .

    PACKAGE         reduce using rule 7 (package_list -> package_list package .)
    $end            reduce using rule 7 (package_list -> package_list package .)


state 11

    (5) import_statement -> IMPORT CLASS_NAME .

    IMPORT          reduce using rule 5 (import_statement -> IMPORT CLASS_NAME .)
    PACKAGE         reduce using rule 5 (import_statement -> IMPORT CLASS_NAME .)


state 12

    (8) package -> PACKAGE CLASS_NAME . LBRACE declarations RBRACE
    (9) package -> PACKAGE CLASS_NAME . declarations
    (10) declarations -> .
    (11) declarations -> . declarations declaration

    LBRACE          shift and go to state 13
    CUSTOM_DATATYPE reduce using rule 10 (declarations -> .)
    ENUM            reduce using rule 10 (declarations -> .)
    AT              reduce using rule 10 (declarations -> .)
    KIND            reduce using rule 10 (declarations -> .)
    SUBKIND         reduce using rule 10 (declarations -> .)
    ROLE            reduce using rule 10 (declarations -> .)
    PHASE           reduce using rule 10 (declarations -> .)
    CATEGORY        reduce using rule 10 (declarations -> .)
    MIXIN           reduce using rule 10 (declarations -> .)
    PHASEMIXIN      reduce using rule 10 (declarations -> .)
    ROLEMIXIN       reduce using rule 10 (declarations -> .)
    HISTORICALROLEMIXIN reduce using rule 10 (declarations -> .)
    COLLECTIVE      reduce using rule 10 (declarations -> .)
    QUANTITY        reduce using rule 10 (declarations -> .)
    QUALITY         reduce using rule 10 (declarations -> .)
    MODE            reduce using rule 10 (declarations -> .)
    INTRINSICMODE   reduce using rule 10 (declarations -> .)
    EXTRINSICMODE   reduce using rule 10 (declarations -> .)
    EVENT           reduce using rule 10 (declarations -> .)
    SITUATION       reduce using rule 10 (declarations -> .)
    PROCESS         reduce using rule 10 (declarations -> .)
    HISTORICALROLE  reduce using rule 10 (declarations -> .)
    RELATOR         reduce using rule 10 (declarations -> .)
    DISJOINT        reduce using rule 10 (declarations -> .)
    COMPLETE        reduce using rule 10 (declarations -> .)
    OVERLAPPING     reduce using rule 10 (declarations -> .)
    INCOMPLETE      reduce using rule 10 (declarations -> .)
    MATERIAL        reduce using rule 10 (declarations -> .)
    MEDIATION       reduce using rule 10 (declarations -> .)
    CHARACTERIZATION reduce using rule 10 (declarations -> .)
    DERIVATION      reduce using rule 10 (declarations -> .)
    COMPARATIVE     reduce using rule 10 (declarations -> .)
    EXTERNALDEPENDENCE reduce using rule 10 (declarations -> .)
    COMPONENTOF     reduce using rule 10 (declarations -> .)
    MEMBEROF        reduce using rule 10 (declarations -> .)
    SUBCOLLECTIONOF reduce using rule 10 (declarations -> .)
    SUBQUALITYOF    reduce using rule 10 (declarations -> .)
    INSTANTIATION   reduce using rule 10 (declarations -> .)
    TERMINATION     reduce using rule 10 (declarations -> .)
    PARTICIPATIONAL reduce using rule 10 (declarations -> .)
    PARTICIPATION   reduce using rule 10 (declarations -> .)
    HISTORICALDEPENDENCE reduce using rule 10 (declarations -> .)
    CREATION        reduce using rule 10 (declarations -> .)
    MANIFESTATION   reduce using rule 10 (declarations -> .)
    BRINGSABOUT     reduce using rule 10 (declarations -> .)
    TRIGGERS        reduce using rule 10 (declarations -> .)
    COMPOSITION     reduce using rule 10 (declarations -> .)
    AGGREGATION     reduce using rule 10 (declarations -> .)
    INHERENCE       reduce using rule 10 (declarations -> .)
    VALUE           reduce using rule 10 (declarations -> .)
    FORMAL          reduce using rule 10 (declarations -> .)
    CONSTITUTION    reduce using rule 10 (declarations -> .)
    GENSET          reduce using rule 10 (declarations -> .)
    PACKAGE         reduce using rule 10 (declarations -> .)
    $end            reduce using rule 10 (declarations -> .)

    declarations                   shift and go to state 14

state 13

    (8) package -> PACKAGE CLASS_NAME LBRACE . declarations RBRACE
    (10) declarations -> .
    (11) declarations -> . declarations declaration

    RBRACE          reduce using rule 10 (declarations -> .)
    CUSTOM_DATATYPE reduce using rule 10 (declarations -> .)
    ENUM            reduce using rule 10 (declarations -> .)
    AT              reduce using rule 10 (declarations -> .)
    KIND            reduce using rule 10 (declarations -> .)
    SUBKIND         reduce using rule 10 (declarations -> .)
    ROLE            reduce using rule 10 (declarations -> .)
    PHASE           reduce using rule 10 (declarations -> .)
    CATEGORY        reduce using rule 10 (declarations -> .)
    MIXIN           reduce using rule 10 (declarations -> .)
    PHASEMIXIN      reduce using rule 10 (declarations -> .)
    ROLEMIXIN       reduce using rule 10 (declarations -> .)
    HISTORICALROLEMIXIN reduce using rule 10 (declarations -> .)
    COLLECTIVE      reduce using rule 10 (declarations -> .)
    QUANTITY        reduce using rule 10 (declarations -> .)
    QUALITY         reduce using rule 10 (declarations -> .)
    MODE            reduce using rule 10 (declarations -> .)
    INTRINSICMODE   reduce using rule 10 (declarations -> .)
    EXTRINSICMODE   reduce using rule 10 (declarations -> .)
    EVENT           reduce using rule 10 (declarations -> .)
    SITUATION       reduce using rule 10 (declarations -> .)
    PROCESS         reduce using rule 10 (declarations -> .)
    HISTORICALROLE  reduce using rule 10 (declarations -> .)
    RELATOR         reduce using rule 10 (declarations -> .)
    DISJOINT        reduce using rule 10 (declarations -> .)
    COMPLETE        reduce using rule 10 (declarations -> .)
    OVERLAPPING     reduce using rule 10 (declarations -> .)
    INCOMPLETE      reduce using rule 10 (declarations -> .)
    MATERIAL        reduce using rule 10 (declarations -> .)
    MEDIATION       reduce using rule 10 (declarations -> .)
    CHARACTERIZATION reduce using rule 10 (declarations -> .)
    DERIVATION      reduce using rule 10 (declarations -> .)
    COMPARATIVE     reduce using rule 10 (declarations -> .)
    EXTERNALDEPENDENCE reduce using rule 10 (declarations -> .)
    COMPONENTOF     reduce using rule 10 (declarations -> .)
    MEMBEROF        reduce using rule 10 (declarations -> .)
    SUBCOLLECTIONOF reduce using rule 10 (declarations -> .)
    SUBQUALITYOF    reduce using rule 10 (declarations -> .)
    INSTANTIATION   reduce using rule 10 (declarations -> .)
    TERMINATION     reduce using rule 10 (declarations -> .)
    PARTICIPATIONAL reduce using rule 10 (declarations -> .)
    PARTICIPATION   reduce using rule 10 (declarations -> .)
    HISTORICALDEPENDENCE reduce using rule 10 (declarations -> .)
    CREATION        reduce using rule 10 (declarations -> .)
    MANIFESTATION   reduce using rule 10 (declarations -> .)
    BRINGSABOUT     reduce using rule 10 (declarations -> .)
    TRIGGERS        reduce using rule 10 (declarations -> .)
    COMPOSITION     reduce using rule 10 (declarations -> .)
    AGGREGATION     reduce using rule 10 (declarations -> .)
    INHERENCE       reduce using rule 10 (declarations -> .)
    VALUE           reduce using rule 10 (declarations -> .)
    FORMAL          reduce using rule 10 (declarations -> .)
    CONSTITUTION    reduce using rule 10 (declarations -> .)
    GENSET          reduce using rule 10 (declarations -> .)

    declarations                   shift and go to state 15

state 14

    (9) package -> PACKAGE CLASS_NAME declarations .
    (11) declarations -> declarations . declaration
    (12) declaration -> . class_declaration
    (13) declaration -> . datatype_declaration
    (14) declaration -> . enum_declaration
    (15) declaration -> . generalization_declaration
    (16) declaration -> . relation_declaration
    (17) class_declaration -> . class_stereotype CLASS_NAME
    (18) class_declaration -> . class_stereotype CLASS_NAME SPECIALIZES parent_list
    (19) class_declaration -> . class_stereotype CLASS_NAME LBRACE class_body RBRACE
    (20) class_declaration -> . class_stereotype CLASS_NAME SPECIALIZES parent_list LBRACE class_body RBRACE
    (58) datatype_declaration -> . CUSTOM_DATATYPE LBRACE datatype_body RBRACE
    (61) enum_declaration -> . ENUM CLASS_NAME LBRACE instance_list RBRACE
    (64) generalization_declaration -> . genset_modifiers GENSET CLASS_NAME WHERE GENERAL CLASS_NAME SPECIFICS class_name_list
    (65) generalization_declaration -> . genset_modifiers GENSET CLASS_NAME LBRACE genset_body RBRACE
    (89) relation_declaration -> . AT relation_stereotype RELATION CLASS_NAME cardinality arrow_symbol RELATION_NAME arrow_symbol cardinality CLASS_NAME
    (90) relation_declaration -> . AT relation_stereotype RELATION CLASS_NAME cardinality arrow_symbol cardinality CLASS_NAME
    (91) relation_declaration -> . AT relation_stereotype RELATION CLASS_NAME arrow_symbol CLASS_NAME
    (92) relation_declaration -> . relation_stereotype CLASS_NAME cardinality arrow_symbol cardinality CLASS_NAME
    (93) relation_declaration -> . relation_stereotype CLASS_NAME arrow_symbol CLASS_NAME
    (23) class_stereotype -> . KIND
    (24) class_stereotype -> . SUBKIND
    (25) class_stereotype -> . ROLE
    (26) class_stereotype -> . PHASE
    (27) class_stereotype -> . CATEGORY
    (28) class_stereotype -> . MIXIN
    (29) class_stereotype -> . PHASEMIXIN
    (30) class_stereotype -> . ROLEMIXIN
    (31) class_stereotype -> . HISTORICALROLEMIXIN
    (32) class_stereotype -> . COLLECTIVE
    (33) class_stereotype -> . QUANTITY
    (34) class_stereotype -> . QUALITY
    (35) class_stereotype -> . MODE
    (36) class_stereotype -> . INTRINSICMODE
    (37) class_stereotype -> . EXTRINSICMODE
    (38) class_stereotype -> . EVENT
    (39) class_stereotype -> . SITUATION
    (40) class_stereotype -> . PROCESS
    (41) class_stereotype -> . HISTORICALROLE
    (42) class_stereotype -> . RELATOR
    (66) genset_modifiers -> .
    (67) genset_modifiers -> . DISJOINT
    (68) genset_modifiers -> . COMPLETE
    (69) genset_modifiers -> . OVERLAPPING
    (70) genset_modifiers -> . INCOMPLETE
    (71) genset_modifiers -> . DISJOINT COMPLETE
    (72) genset_modifiers -> . COMPLETE DISJOINT
    (73) genset_modifiers -> . OVERLAPPING INCOMPLETE
    (74) genset_modifiers -> . INCOMPLETE OVERLAPPING
    (94) relation_stereotype -> . MATERIAL
    (95) relation_stereotype -> . MEDIATION
    (96) relation_stereotype -> . CHARACTERIZATION
    (97) relation_stereotype -> . DERIVATION
    (98) relation_stereotype -> . COMPARATIVE
    (99) relation_stereotype -> . EXTERNALDEPENDENCE
    (100) relation_stereotype -> . COMPONENTOF
    (101) relation_stereotype -> . MEMBEROF
    (102) relation_stereotype -> . SUBCOLLECTIONOF
    (103) relation_stereotype -> . SUBQUALITYOF
    (104) relation_stereotype -> . INSTANTIATION
    (105) relation_stereotype -> . TERMINATION
    (106) relation_stereotype -> . PARTICIPATIONAL
    (107) relation_stereotype -> . PARTICIPATION
    (108) relation_stereotype -> . HISTORICALDEPENDENCE
    (109) relation_stereotype -> . CREATION
    (110) relation_stereotype -> . MANIFESTATION
    (111) relation_stereotype -> . BRINGSABOUT
    (112) relation_stereotype -> . TRIGGERS
    (113) relation_stereotype -> . COMPOSITION
    (114) relation_stereotype -> . AGGREGATION
    (115) relation_stereotype -> . INHERENCE
    (116) relation_stereotype -> . VALUE
    (117) relation_stereotype -> . FORMAL
    (118) relation_stereotype -> . CONSTITUTION

    PACKAGE         reduce using rule 9 (package -> PACKAGE CLASS_NAME declarations .)
    $end            reduce using rule 9 (package -> PACKAGE CLASS_NAME declarations .)
    CUSTOM_DATATYPE shift and go to state 23
    ENUM            shift and go to state 24
    AT              shift and go to state 26
    KIND            shift and go to state 28
    SUBKIND         shift and go to state 29
    ROLE            shift and go to state 30
    PHASE           shift and go to state 31
    CATEGORY        shift and go to state 32
    MIXIN           shift and go to state 33
    PHASEMIXIN      shift and go to state 34
    ROLEMIXIN       shift and go to state 35
    HISTORICALROLEMIXIN shift and go to state 36
    COLLECTIVE      shift and go to state 37
    QUANTITY        shift and go to state 38
    QUALITY         shift and go to state 39
    MODE            shift and go to state 40
    INTRINSICMODE   shift and go to state 41
    EXTRINSICMODE   shift and go to state 42
    EVENT           shift and go to state 43
    SITUATION       shift and go to state 44
    PROCESS         shift and go to state 45
    HISTORICALROLE  shift and go to state 46
    RELATOR         shift and go to state 47
    GENSET          reduce using rule 66 (genset_modifiers -> .)
    DISJOINT        shift and go to state 48
    COMPLETE        shift and go to state 49
    OVERLAPPING     shift and go to state 50
    INCOMPLETE      shift and go to state 51
    MATERIAL        shift and go to state 52
    MEDIATION       shift and go to state 53
    CHARACTERIZATION shift and go to state 54
    DERIVATION      shift and go to state 55
    COMPARATIVE     shift and go to state 56
    EXTERNALDEPENDENCE shift and go to state 57
    COMPONENTOF     shift and go to state 58
    MEMBEROF        shift and go to state 59
    SUBCOLLECTIONOF shift and go to state 60
    SUBQUALITYOF    shift and go to state 61
    INSTANTIATION   shift and go to state 62
    TERMINATION     shift and go to state 63
    PARTICIPATIONAL shift and go to state 64
    PARTICIPATION   shift and go to state 65
    HISTORICALDEPENDENCE shift and go to state 66
    CREATION        shift and go to state 67
    MANIFESTATION   shift and go to state 68
    BRINGSABOUT     shift and go to state 69
    TRIGGERS        shift and go to state 70
    COMPOSITION     shift and go to state 71
    AGGREGATION     shift and go to state 72
    INHERENCE       shift and go to state 73
    VALUE           shift and go to state 74
    FORMAL          shift and go to state 75
    CONSTITUTION    shift and go to state 76

    declaration                    shift and go to state 16
    class_declaration              shift and go to state 17
    datatype_declaration           shift and go to state 18
    enum_declaration               shift and go to state 19
    generalization_declaration     shift and go to state 20
    relation_declaration           shift and go to state 21
    class_stereotype               shift and go to state 22
    genset_modifiers               shift and go to state 25
    relation_stereotype            shift and go to state 27

state 15

    (8) package -> PACKAGE CLASS_NAME LBRACE declarations . RBRACE
    (11) declarations -> declarations . declaration
    (12) declaration -> . class_declaration
    (13) declaration -> . datatype_declaration
    (14) declaration -> . enum_declaration
    (15) declaration -> . generalization_declaration
    (16) declaration -> . relation_declaration
    (17) class_declaration -> . class_stereotype CLASS_NAME
    (18) class_declaration -> . class_stereotype CLASS_NAME SPECIALIZES parent_list
    (19) class_declaration -> . class_stereotype CLASS_NAME LBRACE class_body RBRACE
    (20) class_declaration -> . class_stereotype CLASS_NAME SPECIALIZES parent_list LBRACE class_body RBRACE
    (58) datatype_declaration -> . CUSTOM_DATATYPE LBRACE datatype_body RBRACE
    (61) enum_declaration -> . ENUM CLASS_NAME LBRACE instance_list RBRACE
    (64) generalization_declaration -> . genset_modifiers GENSET CLASS_NAME WHERE GENERAL CLASS_NAME SPECIFICS class_name_list
    (65) generalization_declaration -> . genset_modifiers GENSET CLASS_NAME LBRACE genset_body RBRACE
    (89) relation_declaration -> . AT relation_stereotype RELATION CLASS_NAME cardinality arrow_symbol RELATION_NAME arrow_symbol cardinality CLASS_NAME
    (90) relation_declaration -> . AT relation_stereotype RELATION CLASS_NAME cardinality arrow_symbol cardinality CLASS_NAME
    (91) relation_declaration -> . AT relation_stereotype RELATION CLASS_NAME arrow_symbol CLASS_NAME
    (92) relation_declaration -> . relation_stereotype CLASS_NAME cardinality arrow_symbol cardinality CLASS_NAME
    (93) relation_declaration -> . relation_stereotype CLASS_NAME arrow_symbol CLASS_NAME
    (23) class_stereotype -> . KIND
    (24) class_stereotype -> . SUBKIND
    (25) class_stereotype -> . ROLE
    (26) class_stereotype -> . PHASE
    (27) class_stereotype -> . CATEGORY
    (28) class_stereotype -> . MIXIN
    (29) class_stereotype -> . PHASEMIXIN
    (30) class_stereotype -> . ROLEMIXIN
    (31) class_stereotype -> . HISTORICALROLEMIXIN
    (32) class_stereotype -> . COLLECTIVE
    (33) class_stereotype -> . QUANTITY
    (34) class_stereotype -> . QUALITY
    (35) class_stereotype -> . MODE
    (36) class_stereotype -> . INTRINSICMODE
    (37) class_stereotype -> . EXTRINSICMODE
    (38) class_stereotype -> . EVENT
    (39) class_stereotype -> . SITUATION
    (40) class_stereotype -> . PROCESS
    (41) class_stereotype -> . HISTORICALROLE
    (42) class_stereotype -> . RELATOR
    (66) genset_modifiers -> .
    (67) genset_modifiers -> . DISJOINT
    (68) genset_modifiers -> . COMPLETE
    (69) genset_modifiers -> . OVERLAPPING
    (70) genset_modifiers -> . INCOMPLETE
    (71) genset_modifiers -> . DISJOINT COMPLETE
    (72) genset_modifiers -> . COMPLETE DISJOINT
    (73) genset_modifiers -> . OVERLAPPING INCOMPLETE
    (74) genset_modifiers -> . INCOMPLETE OVERLAPPING
    (94) relation_stereotype -> . MATERIAL
    (95) relation_stereotype -> . MEDIATION
    (96) relation_stereotype -> . CHARACTERIZATION
    (97) relation_stereotype -> . DERIVATION
    (98) relation_stereotype -> . COMPARATIVE
    (99) relation_stereotype -> . EXTERNALDEPENDENCE
    (100) relation_stereotype -> . COMPONENTOF
    (101) relation_stereotype -> . MEMBEROF
    (102) relation_stereotype -> . SUBCOLLECTIONOF
    (103) relation_stereotype -> . SUBQUALITYOF
    (104) relation_stereotype -> . INSTANTIATION
    (105) relation_stereotype -> . TERMINATION
    (106) relation_stereotype -> . PARTICIPATIONAL
    (107) relation_stereotype -> . PARTICIPATION
    (108) relation_stereotype -> . HISTORICALDEPENDENCE
    (109) relation_stereotype -> . CREATION
    (110) relation_stereotype -> . MANIFESTATION
    (111) relation_stereotype -> . BRINGSABOUT
    (112) relation_stereotype -> . TRIGGERS
    (113) relation_stereotype -> . COMPOSITION
    (114) relation_stereotype -> . AGGREGATION
    (115) relation_stereotype -> . INHERENCE
    (116) relation_stereotype -> . VALUE
    (117) relation_stereotype -> . FORMAL
    (118) relation_stereotype -> . CONSTITUTION
